Fix: Arregle la visibilidad de las imagenes

--- a/css/style.css
+++ b/css/style.css
@@ -308,16 +308,40 @@ h2{
     box-shadow: 1px 1px 19px 10px rgba(0, 0, 0, 0.5);
     scroll-snap-align: center;
 }
-#proyectos img{
+#proyectos .content_img{
     justify-self: center;
     align-self: center;
-    padding: 5%;
-    border-radius: 1.5rem;
-    flex-shrink: 0;
+    padding: 15px;
+    /* border-radius: 1rem; */
     /* border-radius: 20px 20px 0px 0px; */
     width: 90%;
     /* height: 40vh; */
     height: 250px;
+    overflow: hidden;
+}
+#proyectos img{
+    justify-self: center;
+    align-self: center;
+    border-radius: 1rem;
+    /* border-radius: 20px 20px 0px 0px; */
+    width: 100%;
+    /* height: 40vh; */
+    height: 100%;
+    object-position: 70% 15%;
+    object-fit: cover;
+    
+}
+#proyectos .content_img .divinoSoftwareimg{
+    object-position: 50% 10%;
+}
+#proyectos .content_img .divinoWebimg{
+    object-position: 50% 10%;
+}
+#proyectos .content_img .redEsperanzaimg{
+    object-position: 80% 10%;
+}
+#proyectos .content_img .petcareimg{
+    object-position: 80% 10%;
 }
 #proyectos .container_cards .card .content_text{
     display: flex;
@@ -604,8 +628,8 @@ footer{
     }
     /*  */
     #proyectos .container_cards .card .content_img{
-        width: 47vh;
-        height: 50vh;
+        width: 92%;
+        height: 250px;
     }
     #proyectos .container_cards{
         gap: 1rem;
@@ -781,6 +805,25 @@ footer{
     #proyectos .container_cards .card{
         width: 28rem;
     }
+    #proyectos img{
+        position: relative;
+        object-position: 70% 15%;
+        object-fit: cover;
+    
+    }
+    #proyectos .content_img .divinoSoftwareimg{
+        object-position: 80% 10%;
+    }
+    #proyectos .content_img .divinoWebimg{
+        object-position: 40% 70%;
+    }
+    #proyectos .content_img .redEsperanzaimg{
+        object-position: 80% 10%;
+    }
+    #proyectos .content_img .petcareimg{
+        object-position: 80% 10%;
+    }
+    
     .link-github{
         margin-bottom: 2rem;
     }
